--- a/app/src/main/res/layout/activity_add_category.xml
+++ b/app/src/main/res/layout/activity_add_category.xml
@@ -15,7 +15,7 @@
         android:layout_marginEnd="16dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:hint="Category Name"
+        android:hint="Group name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
