--- a/app/src/main/res/layout/voucher_activity.xml
+++ b/app/src/main/res/layout/voucher_activity.xml
@@ -4,9 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="#FFFF"
+    android:orientation="vertical"
     tools:context=".MainActivity">
+
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
@@ -20,11 +21,11 @@
 
 
         <TextView
-            android:id="@+id/txt_voucherN0anddate"
+            android:id="@+id/txt_VNand_Date"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="12dp"
-            android:text="VN:234(12-3-2022)"
+            android:text="VN: 234(12-4-2202)"
             android:textAlignment="center"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />
 
@@ -80,13 +81,14 @@
                     android:text="@string/group"
                     android:textColor="#373737" />
 
-                <EditText
-                    android:id="@+id/txt_group"
+                <AutoCompleteTextView
+                    android:id="@+id/txt_autogroup"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_margin="5dp"
                     android:layout_weight="4"
                     android:background="@drawable/selector_dropdown"
+                    android:completionThreshold="1"
                     android:padding="4dp"
                     android:textAllCaps="false"
                     android:textColor="#000"
@@ -119,26 +121,22 @@
                     android:text="@string/item"
                     android:textColor="#373737" />
 
-                <EditText
-                    android:id="@+id/txt_item"
+                <AutoCompleteTextView
+                    android:id="@+id/txt_autoitem"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_margin="5dp"
                     android:layout_weight="4"
                     android:background="@drawable/selector_dropdown"
+                    android:completionThreshold="1"
                     android:maxLength="11"
                     android:padding="4dp"
-                    android:textAllCaps="false"
                     android:textColor="#000000"
                     android:textSize="15sp" />
             </LinearLayout>
 
 
-
-
         </LinearLayout>
-
-
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -147,143 +145,152 @@
             android:layout_marginRight="0dp"
             android:orientation="horizontal"
             android:weightSum="10">
+
             <EditText
+                android:id="@+id/qty"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:paddingLeft="6dp"
                 android:layout_weight="3"
-                android:hint="Qty" />
+                android:hint="Qty"
+                android:inputType="number"
+                android:layout_marginStart="5dp"
+                android:background="@drawable/bg_red_rectangle"
+                android:paddingLeft="6dp" />
 
             <TextView
+                android:id="@+id/ammount"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="3"
                 android:gravity="center"
+                android:hint="Ammount"
                 android:paddingLeft="6dp"
-                android:textColorHint="@color/black"
-                android:textSize="17dp"
                 android:textColor="@color/black"
-                android:hint="Ammount" />
+                android:textColorHint="@color/black"
+                android:textSize="17dp" />
 
             <Button
                 android:id="@+id/buttonAddEmployee"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="5dp"
                 android:layout_weight="4"
-                android:layout_margin="8dp"
                 android:background="@drawable/bg_red_rectangle"
                 android:text="Add to list"
                 android:textAllCaps="false" />
 
         </LinearLayout>
 
-
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/id_Linearlayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_marginBottom="60dp"
-        android:orientation="vertical"
-        android:padding="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout">
-
-
-        <TextView
+        <LinearLayout
+            android:id="@+id/id_Linearlayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="12dp"
-            android:background="@drawable/bg_red_rectangle"
-            android:text="Item Details"
-            android:fontFamily="@font/josefinsans_semibolditalic"
-            android:textAlignment="center"
-            android:textColor="@color/black"
-            android:textSize="17dp" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:background="@drawable/bg_red_rectangle"
-            android:orientation="horizontal"
-            android:weightSum="9">
+            android:layout_centerVertical="true"
+            android:layout_marginBottom="60dp"
+            android:orientation="vertical"
+            android:padding="16dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout">
 
 
             <TextView
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="3"
-                android:fontFamily="@font/josefinsans_semibold"
-                android:gravity="center"
-                android:text="Group"
-                android:textColor="#000"
-                android:textStyle="bold"
-                android:visibility="gone" />
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="5"
-                android:fontFamily="@font/josefinsans_semibold"
-                android:gravity="center"
-                android:text="Item"
-                android:textColor="#000"
-                android:textStyle="bold"
-                android:visibility="gone" />
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="3"
-                android:fontFamily="@font/josefinsans_semibold"
-                android:gravity="center"
-                android:text="Qty"
-                android:textColor="#000"
-                android:textStyle="bold" />
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="3"
-                android:fontFamily="@font/josefinsans_semibold"
-                android:gravity="center"
-                android:text="Sub-total"
-                android:textColor="#000"
-                android:textStyle="bold" />
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="3"
-                android:fontFamily="@font/josefinsans_semibold"
-                android:gravity="center"
-                android:text="Commission"
-                android:textColor="#000"
-                android:textStyle="bold" />
-
-        </LinearLayout>
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="300dp"
-            android:layout_marginLeft="0dp"
-            android:layout_marginRight="0dp"
-            android:orientation="horizontal"
-            android:weightSum="10">
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recyclerview"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                tools:listitem="@layout/item_details_simple" />
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="12dp"
+                android:background="@drawable/bg_red_rectangle"
+                android:fontFamily="@font/josefinsans_semibolditalic"
+                android:text="Item Details"
+                android:textAlignment="center"
+                android:textColor="@color/black"
+                android:textSize="17dp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:background="@drawable/bg_red_rectangle"
+                android:orientation="horizontal"
+                android:weightSum="9">
+
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="3"
+                    android:fontFamily="@font/josefinsans_semibold"
+                    android:gravity="center"
+                    android:text="Group"
+                    android:textColor="#000"
+                    android:textStyle="bold"
+                    android:visibility="gone" />
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="5"
+                    android:fontFamily="@font/josefinsans_semibold"
+                    android:gravity="center"
+                    android:text="Item"
+                    android:textColor="#000"
+                    android:textStyle="bold"
+                    android:visibility="gone" />
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="3"
+                    android:fontFamily="@font/josefinsans_semibold"
+                    android:gravity="center"
+                    android:text="Qty"
+                    android:textColor="#000"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="3"
+                    android:fontFamily="@font/josefinsans_semibold"
+                    android:gravity="center"
+                    android:text="Sub-total"
+                    android:textColor="#000"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="3"
+                    android:fontFamily="@font/josefinsans_semibold"
+                    android:gravity="center"
+                    android:text="Commission"
+                    android:textColor="#000"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
+                android:layout_marginLeft="0dp"
+                android:layout_marginRight="0dp"
+                android:orientation="horizontal"
+                android:weightSum="10">
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recyclerview"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    tools:listitem="@layout/item_details_simple" />
+            </LinearLayout>
+
+
         </LinearLayout>
 
 
     </LinearLayout>
+
 
     <Button
         android:id="@+id/buttonSaveFinal"
