--- a/app/src/main/res/layout/activity_add_category.xml
+++ b/app/src/main/res/layout/activity_add_category.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AddCategoryActivity">
+    tools:context=".activitys.AddCategoryActivity">
 
     <EditText
         android:id="@+id/edittext_categoryname"
@@ -36,6 +36,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="32dp"
         android:text="cancel"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@+id/buttonSave"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/buttonSave" />
