--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,12 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#7CB342"
-    tools:context=".LoginActivity">
+    android:background="#5E5E5E"
+    tools:context=".activitys.LoginActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="16dp"
         android:orientation="vertical"
         android:weightSum="14"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -25,7 +26,8 @@
             android:layout_weight="2"
             android:padding="4dp"
             android:scaleType="fitCenter"
-            android:src="@drawable/ic_launcher_background" />
+            android:src="@drawable/ic_launcher_background"
+            android:visibility="gone" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -33,6 +35,7 @@
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:layout_weight="1"
+            android:visibility="invisible"
             android:background="@drawable/bg_red_rectangle">
 
 
@@ -95,11 +98,11 @@
                             android:layout_height="wrap_content"
                             android:background="@drawable/text_field_bg"
                             android:focusable="true"
-                            android:visibility="gone"
                             android:fontFamily="@font/josefinsans_regular"
                             android:hint="Institute Code"
                             android:inputType="number"
-                            android:textColor="#000" />
+                            android:textColor="#000"
+                            android:visibility="gone" />
                     </com.google.android.material.textfield.TextInputLayout>
 
                     <com.google.android.material.textfield.TextInputLayout
@@ -157,11 +160,11 @@
                             android:id="@+id/tv_login"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
+                            android:background="#3C3C3C"
                             android:gravity="center"
-                            android:text="Login"
                             android:onClick="LoginClicked"
-                            android:background="#487C11"
-                            android:textColor="@color/black"
+                            android:text="Login"
+                            android:textColor="@color/loginBkColor"
                             android:textSize="18sp" />
 
                     </LinearLayout>
@@ -185,8 +188,6 @@
 
 
         </androidx.cardview.widget.CardView>
-
-
 
 
     </LinearLayout>
