--- a/app/src/main/res/layout/dialog_custom.xml
+++ b/app/src/main/res/layout/dialog_custom.xml
@@ -47,6 +47,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:maxLines="8"
+                android:visibility="gone"
                 android:hint="Body"
                 android:textAlignment="viewStart"
                 android:textColor="#FF0000"
