--- a/app/src/main/res/layout/voucher_activity.xml
+++ b/app/src/main/res/layout/voucher_activity.xml
@@ -121,7 +121,7 @@
                     android:text="@string/item"
                     android:textColor="#373737" />
 
-                <AutoCompleteTextView
+                <Spinner
                     android:id="@+id/txt_autoitem"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -163,7 +163,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="3"
                 android:gravity="center"
-                android:hint="Ammount"
+                android:hint="TK. 4466"
                 android:paddingLeft="6dp"
                 android:textColor="@color/black"
                 android:textColorHint="@color/black"
